--- a/templates/Board.html
+++ b/templates/Board.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block navbar %}
   <a href="{{ url_for('login')}}"> Login </a> <br>
+  <a href="{{ url_for('signup')}}"> Signup </a> <br>
   <a href="{{ url_for('older_game')}}"> Get Older Game </a> <br>
   <a href="{{ url_for('new_game')}}"> Get New Game </a> <br>
   <button  style="font-size: 20px;" id = "restoreState()"> Restore State </button>
@@ -8,6 +9,7 @@
 {% endblock %}
 {% block body %}
   <main>
+    <p id="outputFeedback" style="display: none; font-size : 20px"></p>
     <ul>
       {% for row in row_wise_board %}
         {% for elements in row %}
