--- a/templates/Board.html
+++ b/templates/Board.html
@@ -4,7 +4,7 @@
   <a href="{{ url_for('signup')}}"> Signup </a> <br>
   <a href="{{ url_for('older_game')}}"> Get Older Game </a> <br>
   <a href="{{ url_for('new_game')}}"> Get New Game </a> <br>
-  <button  style="font-size: 20px;" id = "restoreState()"> Restore State </button>
+  <button  style="font-size: 20px;" id = "restoreState"> Restore State </button>
   <button style="font-size: 20px;" id = "saveGame"> Save Game </button>
 {% endblock %}
 {% block body %}
