--- a/static/css/sudoku.css
+++ b/static/css/sudoku.css
@@ -4,7 +4,7 @@ H1 {
     margin:0px 0px 2px 0px;
     font-size:20px;
     padding:2px 1px 5px 1px;
-    text-align:center;    
+    text-align:initial;    
 }
 
 body {
