--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -3,24 +3,66 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/sudoku.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/button.css') }}">
     </head>
     <body>
-        <a href="#" id="sidebar-toggle">
+        <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+            <div class="container">
+                <div class="navbar-header">
+                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="./" class="navbar-brand">Sudoku</a>
+                </div>
+                <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                    <a href="#">Home</a>
+                    </li>
+                    <!--li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Mission</a></li>
+                        <li><a href="#">Vision</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                    </li-->
+                    <li>
+                    <a id="save">save game</a>
+                    </li>
+                    <li>
+                    <a id="log">log out</a>
+                    </li>
+                </ul>
+                </nav>
+            </div>
+        </header>
+        <!--a href="#" id="sidebar-toggle">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-        </a>
+        </a-->
 
-        <h1 id="sudoku_title">SUDOKU</h1>
-
+        <!--h1 id="sudoku_title">SUDOKU</h1>
+        <h2>Log in</h2>
+        <h2>Sign up</h2>
         <div id="sudoku_menu">
         <ul>
             <li><a class="restart" href="#">New Game</a></li>
             <li></li>
         </ul>
-        </div>
+        </div-->
+        <div class="row" style="margin: 50px;"></div>
+        <div class="col-xl-4" id="sudoku_container"></div>
+        <button class="purple">Undo &#9100;</button>
+        <div class="row" style="margin: 50px;"></div>
 
-        <div id="sudoku_container"></div>
     </body>
 <script>
     /* Work in progress */
@@ -113,7 +155,7 @@
         {% for row in row_wise_board %}
             {% for elements in row %}
                 ++index;
-                cell_info.push("squareNumber {{ elements['squareNumber'] }} cellNumber {{ elements['cellNumber']}} rowNumber {{ elements['rowNumber']}} columnNumber {{ elements['columnNumber']}}");
+                cell_info.push("squareNumber_{{ elements['squareNumber'] }}_cellNumber_{{ elements['cellNumber']}}_rowNumber_{{ elements['rowNumber']}}_columnNumber_{{ elements['columnNumber']}}");
                 {% if elements['value']|string|length %}
                     this.board_init[index] = {{ elements['value'] }};
                 {% endif %}
@@ -372,7 +414,7 @@
         }*/
         if ( this.cell !== null ) {
             var cell = $(this.cell);
-            var cell_id = $(this.cell).attr('id').split(' ');
+            var cell_id = $(this.cell).attr('id').split('_');
             data = {'value': value};
             data[cell_id[0]] = cell_id[1];
             data[cell_id[2]] = cell_id[3];
@@ -564,7 +606,7 @@
         });
         $('.num.note').off();
         $('.num.note').on('click', function() {
-            var cell = get_cell_id.split(' ');
+            var cell = get_cell_id.split('_');
             var data = {};
             data[cell[0]] = cell[1];
             data[cell[2]] = cell[3];
@@ -574,6 +616,46 @@
                     success: function(response) {
                         $('#' + get_cell_id + '> span').html(response['value']);
                     }});
+        });
+        $('#save').on('click', function() {
+            var sudoku_grid = [];
+            var row = [];
+            $('div.cell > span').each(function(i) {
+                var val = $(this).text();
+                if(val == '') {
+                    row.push(0);
+                }
+                else {
+                    row.push(parseInt(val));
+                }
+            });
+            //console.log(row);
+            for(var i = 0; i < 81; i += 9) {
+                sudoku_grid.push(row.slice(i, i+9));
+            }
+            //console.log(sudoku_grid);
+            $.ajax({type: 'POST', url: 'http://127.0.0.1:5000/api/v1/save_game', contentType: 'application/json',
+                    data: JSON.stringify(sudoku_grid), success: function() {
+                        console.log('saved');
+                        
+                    }});
+        });
+        $('.purple').on('click', function() {
+            $.ajax({type: 'POST', url: 'http://127.0.0.1:5000/api/v1/restore_previous_state', success: function(response) {
+                var cell_id = [];
+                for(const key of Object.keys(response)) {
+                    cell_id.push(key + '_' + response[key]);
+                }
+                cell_id.pop();
+                cell_id.pop();
+                cell_id = cell_id.join('_');
+                $('#' + cell_id + ' > span').text(response['value']);
+            }});
+        });
+        $('#log').on('click', function() {
+            $.ajax({url: 'http://127.0.0.1:5000/api/v1/logout', success: function() {
+                window.location.replace('http://127.0.0.1:5000/api/v1/user_login');
+            }});
         });
     });
 </script>
