added logout functionality

--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -37,7 +37,7 @@
                     <a id="save">save game</a>
                     </li>
                     <li>
-                    <a id="log">log out</a>
+                    <a id="log" href = "{{ url_for('logout') }}">log out</a>
                     </li>
                 </ul>
                 </nav>
