--- a/templates/previous_games.html
+++ b/templates/previous_games.html
@@ -67,6 +67,9 @@
                         <li>
                         <a href="http://127.0.0.1:5000/signup" id="log">sign up</a>
                         </li>
+                        <li>
+                        <a href="http://127.0.0.1:5000/logout" id="log">Logout</a>
+                        </li>
                     </ul>
                     </nav>
                 </div>
