--- a/templates/index.html
+++ b/templates/index.html
@@ -6,22 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='login/images/icons/favicon.ico') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <!--link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sudoku.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:500&display=swap" rel="stylesheet">
 
     <style>
         p {
-            color: #fff;
+            color: #0f528c;
             font-family: 'Ubuntu', sans-serif;
             font-size: x-large;
         }
         .info {
             position: relative;
-            margin: auto;
-            direction: rtl;
+            margin: 100px;
+            direction: inherit;
+            top: 100px;
+            text-align: center;
         }
     </style>
 </head>
@@ -64,15 +67,15 @@
                 </div>
             </header>
             <div class="info">
-                <p>Design Pattern</p>
+                <p><u>Design Pattern</u></p>
                 <p>(UE16CS426)</p>
             </div>
             <div class="info">
-                <p>Project No. 6</p>
+                <p><u>Project No. 6</u></p>
                 <p>Sudoku Game Design</p>
             </div>
             <div class="info">
-                <p>Team Members</p>
+                <p><u>Team Members</u></p>
                 <p>Manish Soni - 01FB16ECS193</p>
                 <p>Vaibhav Pundir - 01FB16ECS431</p>
             </div>
