--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,6 @@
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='login/images/icons/favicon.ico') }}"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login/vendor/bootstrap/css/bootstrap.min.css') }}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login/fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}">
 <!--===============================================================================================-->
@@ -19,12 +18,44 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login/css/util.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login/css/main.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/sudoku.css') }}">
 <!--===============================================================================================-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
+
+
 </head>
 <body>
 
 	<div class="limiter">
 		<div class="container-login100">
+			<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+				<div class="container">
+					<div class="navbar-header">
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="./" class="navbar-brand">Sudoku</a>
+					</div>
+					<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+						<a href="http://127.0.0.1:5000">Home</a>
+						</li>
+						<li>
+						<a href="#" id="save">log in</a>
+						</li>
+						<li>
+						<a href="http://127.0.0.1:5000/signup" id="log">sign up</a>
+						</li>
+					</ul>
+					</nav>
+				</div>
+			</header>
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="{{ url_for('static', filename='login/images/img-01.png') }}" alt="IMG">
@@ -59,16 +90,13 @@
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							Forgot
 						</span>
 						<a class="txt2" href="#">
-							Username / Password?
 						</a>
 					</div>
 
 					<div class="text-center p-t-136">
 						<a class="txt2" href="signup.html">
-							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
