--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -34,10 +34,10 @@
                     </ul>
                     </li-->
                     <li>
-                    <a id="save">save game</a>
+                    <a href="#" id="save">save game</a>
                     </li>
                     <li>
-                    <a id="log">log out</a>
+                    <a href="#" id="log">log out</a>
                     </li>
                 </ul>
                 </nav>
