--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -34,10 +34,14 @@
                     </ul>
                     </li-->
                     <li>
-                    <a href="#" id="save">save game</a>
-                    </li>
-                    <li>
-                    <a href="#" id="log">log out</a>
+                        <a href="#" id="save">save game</a>
+                        </li>
+                        <li>
+                            <li>
+                            <a href="http://127.0.0.1:5000/game_history" id="save">All Games</a>
+                            </li>
+                            <li>
+                    <a href="{{ url_for('logout')}}" id="log">log out</a>
                     </li>
                 </ul>
                 </nav>
@@ -369,7 +373,6 @@
     */
     Sudoku.prototype.addValue = function(value) {
         console.log('prepare for addValue', value);
-        
         var    
             position       = { x: $(this.cell).attr('x'), y: $(this.cell).attr('y') },        
             group_position = { x: Math.floor((position.x -1)/3), y: Math.floor((position.y-1)/3) },
@@ -430,7 +433,13 @@
                         else {
                             cell.removeClass('notvalid');
                         }
+                        if(value == 0) {
+                            console.log('value 0');
+                            
+                            $(cell).removeClass('notvalid');
+                        }
                     }});
+            
         }
         else {
             //add value
@@ -647,9 +656,16 @@
                 var cell_id = "squareNumber_" + response['squareNumber'] + "_cellNumber_" + response['cellNumber'] +
                 "_rowNumber_" + response['rowNumber'] + "_columnNumber_" + response['columnNumber'];
                 console.log(cell_id);
+                console.log(response);
                 
                 $('#' + cell_id + ' > span').text(response['value']);
-            }});
+                if(response['value'] == "") {
+                    $('#' + cell_id).removeClass('notvalid');
+                    console.log('notvalid');
+                    
+                }
+            }
+            });
         });
         $('#log').on('click', function() {
             $.ajax({url: 'http://127.0.0.1:5000/logout', success: function() {
